Implement getLastPosition
