# geotracking-reactive-annotation-microservice/src/main/java/com/example/reactive/annotation/geotracking/api/controller/TracksController.java
@@ -1,24 +1,22 @@
 package com.example.reactive.annotation.geotracking.api.controller;
 
-import com.example.reactive.annotation.geotracking.dto.TrackResponseDTO;
-import com.example.reactive.annotation.geotracking.dto.UserGeoPointResponseDTO;
-import com.example.reactive.annotation.geotracking.service.GeoPointService;
 import com.example.reactive.annotation.geotracking.api.TracksApi;
+import com.example.reactive.annotation.geotracking.service.dto.SearchTrackByCriteria;
+import com.example.reactive.annotation.geotracking.dto.GeoPointResponseDTO;
 import com.example.reactive.annotation.geotracking.dto.TrackDTO;
 import com.example.reactive.annotation.geotracking.dto.TrackRefDTO;
+import com.example.reactive.annotation.geotracking.service.GeoPointService;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
-import org.springframework.web.reactive.function.server.ServerResponse;
 import org.springframework.web.server.ServerWebExchange;
 import org.springframework.web.server.ServerWebInputException;
+import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 import java.time.OffsetDateTime;
-
-import static org.springframework.web.reactive.function.BodyInserters.fromValue;
 
 
 @RestController
@@ -39,7 +37,7 @@ public class  TracksController implements TracksApi {
      * {@inheritDoc}
      */
     @Override
-    public Mono<ResponseEntity<UserGeoPointResponseDTO>> getLastPosition(String user, String deviceId, ServerWebExchange exchange) {
+    public Mono<ResponseEntity<GeoPointResponseDTO>> getLastPosition(String user, String deviceId, ServerWebExchange exchange) {
         if (!StringUtils.isEmpty(deviceId)) {
             return geoPointService.getLastPositionByDeviceId(deviceId)
                     .map(ResponseEntity::ok)
@@ -57,7 +55,20 @@ public class  TracksController implements TracksApi {
      * {@inheritDoc}
      */
     @Override
-    public Mono<ResponseEntity<TrackResponseDTO>> getTrackByParams(String user, OffsetDateTime dateFrom, OffsetDateTime dateTo, ServerWebExchange exchange) {
-        return null;
+    public Mono<ResponseEntity<Flux<GeoPointResponseDTO>>> getTrackByParams(String user, OffsetDateTime dateFrom, OffsetDateTime dateTo, ServerWebExchange exchange) {
+         final SearchTrackByCriteria criteria = SearchTrackByCriteria.builder()
+                .user(user)
+                .dateFrom(dateFrom)
+                .dateTo(dateTo)
+                .build();
+
+        return Mono.just(ResponseEntity.ok(geoPointService.findGeoPointByParameters(criteria)));
+
+//        return geoPointService.findGeoPointByParameters(criteria)
+//                .collectList()
+//                .flatMap(list -> list.isEmpty()
+//                        ? Mono.just(ResponseEntity.noContent().build())
+//                        : Mono.just(ResponseEntity.ok().body(Flux.fromIterable(list))));
+
     }
 }
