# geotracking-reactive-functional-microservice/src/main/java/com/example/reactive/functional/geotracking/api/handlers/TracksHandler.java
@@ -1,13 +1,22 @@
 package com.example.reactive.functional.geotracking.api.handlers;
 
+import com.example.reactive.functional.geotracking.common.util.DateUtil;
+import com.example.reactive.functional.geotracking.dto.GeoPointResponseDTO;
 import com.example.reactive.functional.geotracking.dto.TrackDTO;
 import com.example.reactive.functional.geotracking.service.GeoPointService;
+import com.example.reactive.functional.geotracking.service.dto.SearchTrackByCriteria;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.stereotype.Component;
+import org.springframework.util.StringUtils;
 import org.springframework.web.reactive.function.server.ServerRequest;
 import org.springframework.web.reactive.function.server.ServerResponse;
+import org.springframework.web.server.ServerWebInputException;
 import reactor.core.publisher.Mono;
+
+import java.util.Optional;
 
 import static org.springframework.http.MediaType.APPLICATION_JSON;
 import static org.springframework.web.reactive.function.BodyInserters.fromValue;
@@ -28,6 +37,49 @@ public class TracksHandler {
                         geoPointService::processTrack
                 )
                 .flatMap(cust -> ServerResponse.ok().contentType(APPLICATION_JSON).body(fromValue(cust)));
+    }
+
+
+    public Mono<ServerResponse> getLastPosition(ServerRequest request) {
+        final Optional<String> user = request.queryParam("user");
+        final Optional<String> deviceId = request.queryParam("deviceId");
+
+        if (deviceId.isPresent() && StringUtils.hasLength(deviceId.get())) {
+            return geoPointService.getLastPositionByDeviceId(deviceId.get()).flatMap(geoPoint -> ServerResponse.ok()
+                            .body(fromValue(geoPoint)))
+                    .switchIfEmpty(ServerResponse.noContent().build());
+
+        } else if (user.isPresent() && StringUtils.hasLength(user.get())) {
+            return geoPointService.getLastPositionByUser(user.get()).flatMap(geoPoint -> ServerResponse.ok()
+                                    .body(fromValue(geoPoint)))
+                            .switchIfEmpty(ServerResponse.noContent().build());
+
+        } else {
+            throw new ServerWebInputException("Some parameter does not have to be empty");
+        }
+    }
+
+
+    public Mono<ServerResponse> getTrackByParams(ServerRequest request) {
+        final SearchTrackByCriteria criteria = SearchTrackByCriteria.builder()
+                .user(request.queryParam("user").orElse(null))
+                .dateFrom(request.queryParam("dateFrom")
+                        .map(DateUtil::parseToOffsetDateTime)
+                        .orElse(null))
+                .dateTo(request.queryParam("dateTo")
+                        .map(DateUtil::parseToOffsetDateTime)
+                        .orElse(null))
+                .build();
+
+        LOGGER.debug(":: getTrackByParams :: Params {} ", criteria);
+
+        return geoPointService.findGeoPointByParameters(criteria).collectList()
+                .flatMap(ele -> {
+                    LOGGER.debug(":: getTrackByParams :: Result {} geopoints", ele.size());
+                    if (!ele.isEmpty()) {
+                        return ServerResponse.ok().contentType(APPLICATION_JSON).body(fromValue(ele));
+                    } else return ServerResponse.noContent().build();
+                });
     }
 
 }
