# geotracking-reactive-functional-microservice/src/main/java/com/example/reactive/functional/geotracking/api/routers/TracksRlouter.java
@@ -2,9 +2,12 @@ package com.example.reactive.functional.geotracking.api.routers;
 
 import com.example.reactive.functional.geotracking.api.handlers.TracksHandler;
 import com.example.reactive.functional.geotracking.dto.ErrorDTO;
+import com.example.reactive.functional.geotracking.dto.GeoPointResponseDTO;
 import com.example.reactive.functional.geotracking.dto.TrackDTO;
 import com.example.reactive.functional.geotracking.dto.TrackRefDTO;
 import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
 import io.swagger.v3.oas.annotations.media.Content;
 import io.swagger.v3.oas.annotations.media.Schema;
 import io.swagger.v3.oas.annotations.parameters.RequestBody;
@@ -46,5 +49,52 @@ public class TracksRlouter {
         return RouterFunctions.route(POST("/tracks").and(accept(APPLICATION_JSON)).and(contentType(APPLICATION_JSON)), tracksHandler::processTrack);
     }
 
+
+
+    @Bean
+    @RouterOperation(
+            operation = @Operation(
+                    operationId = "getLastPosition",
+                    summary = "Get the last position of a device or user",
+                    description = "Get the last position of a device, you can filter by user or by deviceId. But it is mandatory to filter by one of the two parameters.",
+                    tags = { "Tracking" },
+
+                    parameters = {
+                            @Parameter(in = ParameterIn.QUERY, name = "user", description = "User Id", required = false),
+                            @Parameter(in = ParameterIn.QUERY, name = "deviceId", description = "Device Id", required = false)
+                    },
+
+                    responses = {
+                            @ApiResponse(responseCode = "200", description = "Return one GeoPoint user item", content = @Content(schema = @Schema(implementation = GeoPointResponseDTO.class))),
+                            @ApiResponse(responseCode = "204", description = "Empty results."),
+                            @ApiResponse(responseCode = "400", description = "Bad input parameters.")
+                    }
+            )
+    )
+    public RouterFunction<ServerResponse> getLastPosition(TracksHandler tracksHandler) {
+        return RouterFunctions.route(GET("/tracks/lastPosition").and(accept(APPLICATION_JSON)), tracksHandler::getLastPosition);
+    }
+
+
+    @Bean
+    @RouterOperation(operation = @Operation(
+                    operationId = "getTrackByParams",
+                    summary = "Get the track of a user in a time interval",
+                    tags = { "Tracking" },
+                    parameters = {
+                            @Parameter(in = ParameterIn.QUERY, name = "user", description = "User Id", required = true),
+                            @Parameter(in = ParameterIn.QUERY, name = "dateFrom", description = "Track start date", required = true, example = "2021-07-05T07:30:00Z"),
+                            @Parameter(in = ParameterIn.QUERY, name = "dateTo", description = "Track end date", required = true, example = "2021-07-05T18:30:00Z")
+
+                    },
+                    responses = {
+                            @ApiResponse(responseCode = "200", description = "successful operation", content = @Content(schema = @Schema(implementation = GeoPointResponseDTO.class))),
+                            @ApiResponse(responseCode = "204", description = "Empty results.")
+                    }
+            )
+    )
+    public RouterFunction<ServerResponse> getTrackByParams(TracksHandler tracksHandler) {
+        return RouterFunctions.route(GET("/tracks").and(accept(APPLICATION_JSON)), tracksHandler::getTrackByParams);
+    }
 
 }
